@@ -2,7 +2,7 @@
 #version=DEVEL
 
 # Firewall configuration
-firewall --enabled --http --ssh --smtp --port=10000:tcp
+firewall --enabled --http --https --ssh --smtp --port=10000:tcp
 
 # Install OS instead of upgrade
 install
@@ -75,7 +75,6 @@ php-gd
 php-mbstring
 php-mysql
 httpd
-dnsmasq
 rrdtool
 rrdtool-perl
 postfix
